--- a/d.service
+++ b/d.service
@@ -3,7 +3,7 @@ Description=Python ARP Daemon
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/python3 /opt/arp-daemon/src/arp_daemon.py
+ExecStart=/usr/bin/python3 /opt/arp-daemon/s.py
 Restart=always
 User=root
 Group=root
